color y imagenes en login y registro

--- a/src/views/login/signUp.ejs
+++ b/src/views/login/signUp.ejs
@@ -1,13 +1,13 @@
 <%- include('../template/head.ejs') %>
 <div class="row ml-0 mr-0 d-flex align-items-md-center position-relative" style="min-height: 100vh;">
     <div style="position: absolute; width: 100%; left: 0; top: 0; transform: rotateZ(180deg) rotateY(180deg)">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 160"><path fill="#007bff" fill-opacity="1" d="M0,160L1440,80L1440,160L0,160Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 160"><path fill="#ff637d" fill-opacity="1" d="M0,160L1440,80L1440,160L0,160Z"></path></svg>
     </div>
     <div style="position: absolute; width: 100%; right: 0; bottom: 0; transform: rotateY(180deg);">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 160"><path fill="#007bff" fill-opacity="1" d="M0,160L1440,80L1440,160L0,160Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 160"><path fill="#66d7d1" fill-opacity="1" d="M0,160L1440,80L1440,160L0,160Z"></path></svg>
     </div>
     <div class="col-md-6 d-flex flex-column align-items-center">
-        <img src="/public/img/team.svg" alt="Team" class="img-fluid">
+        <img src="/public/img/team2.jpg" alt="Team" class="img-fluid">
     </div>
     <div class="col-md-6 d-flex flex-column align-items-center">
         <span class="title text-center">REGISTRO</span>
