--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="bg-color_1">
     <%- include('./profilePicture.ejs') %>
     <% if(role === 'ALUMNO') { %>
         <%- include('./navAlumno.ejs')%>
